--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bookingapp",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -10,7 +11,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.13.0",
+    "mongoose": "^8.13.1",
     "nodemon": "^3.1.9"
   }
 }
